spec/.test/config/invalid/parameters.php
<?php

return [
    'parameters' => 1,
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
];
